--- a/src/main/resources/templates/fragments/base.html
+++ b/src/main/resources/templates/fragments/base.html
@@ -2,6 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 	<head th:fragment="head">
+	
+		<title th:text="${title}"></title>
+	
 	    <!-- Required meta tags -->
 	    <meta charset="UTF-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -13,8 +16,13 @@
 		<!-- Bootstrap Icons -->
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 		
-		<title th:text="${title}"></title>
-			
+		<!-- Google Fonts -->
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Chakra+Petch&display=swap" rel="stylesheet">
+		
+		<script src="https://kit.fontawesome.com/381144165f.js" crossorigin="anonymous"></script>
+		
 	</head>
 	
 	<body>
@@ -30,7 +38,7 @@
 						<small th:text="${pageTitle}"></small>
 					</div>
 				</div>
-				<a th:href="@{/logout}">Effettua il logout</a>
+				<a th:href="@{/logout}" class="text-white"><i class="fa-solid fa-arrow-right-from-bracket"></i></a>
 			</div>
 		</header>
 	
