--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,37 +12,39 @@
 
 			<div class="p-5 flex-fill">
 				<div class="text-center">
-					<h1 class="pt-1 pb-5 pb-">eSquid</h1>
+					<h1 class="heading-app-name pt-1 pb-5">eSquid</h1>
 				</div>
 				<h1>Accedi</h1>
+				<br>
 				<div th:if="${param.error}" class="alert alert-danger" role="alert">Credenziali
 					errate</div>
 				<div th:if="${param.logout}" class="alert alert-success" role="alert">Hai
 					effettuato il logout</div>
 
 				<form th:action="@{/login}" method="post">
-					<div class="form-outline mb-4">
-						<input type="text" name="username" placeholder="Username"
-							id="form2Example11" class="form-control" />
+					<div class="mb-3">
+						<label for="input-username" class="form-label">Username</label>
+						<input type="text" name="username"
+							id="input-username" class="form-control" />
 					</div>
 
-					<div class="form-outline mb-4">
-						<input type="password" name="password" placeholder="Password"
-							id="form2Example22" class="form-control" />
+					<div class="mb-3">
+						<label for="input-password" class="form-label">Password</label>
+						<input type="password" name="password"
+							id="input-password" class="form-control" />
 					</div>
-
-					<div class="d-grid pt-1 mb-5 pb-1">
-						<button type="submit"
-							class="btn text-white fa-lg gradient-custom-2 mb-3">Accedi</button>
+					
+					<div class="d-grid">
+						<button type="submit" class="btn text-white gradient-custom-2 mb-3">Accedi</button>
 					</div>
 
 				</form>
-				<div class="d-flex align-items-center justify-content-center pb-4">
+				<div class="d-flex align-items-center justify-content-center">
 					<p class="mb-0 me-2">
 						Non hai ancora un account? <a th:href="@{/register}" class="link-purple">Registrati</a>.</span>
 					</p>
 				</div>
-				<hr>
+				<hr class="hr-text my-4" data-content="oppure">
 				<div class="d-grid">
 					<a class="btn text-white gradient-custom-2"
 						th:href="@{/oauth2/authorization/google}">
