--- a/src/main/resources/templates/update-competition.html
+++ b/src/main/resources/templates/update-competition.html
@@ -64,7 +64,7 @@
 				</div>
 
 				<input type="hidden" th:field="*{id}" />
-				<input type="hidden" th:field="*{matches}" />
+				<input type="hidden" th:field="*{playedMatches}" />
 
 				<div class="d-grid">
 					<button type="submit" class="btn text-white gradient-custom-2">Salva
