--- a/src/main/resources/templates/competition.html
+++ b/src/main/resources/templates/competition.html
@@ -43,7 +43,7 @@
 			<div class="position-relative">
 				<div sec:authorize="hasAuthority('ADMIN')" class="position-relative">
 					<a class="plus-button position-absolute top-0 end-0" type="button"
-						th:href="@{'/admin/competition/' + ${competition.id} + '/match/new'}">
+						th:href="@{'/admin/competition/' + ${competition.id} + '/played-match/new'}">
 						<i class="bi bi-plus"></i>
 					</a>
 				</div>
@@ -53,11 +53,11 @@
 
 				<ul class="list-group">
 
-					<li th:each="match : ${competition.matches}"
+					<li th:each="playedMatch : ${competition.playedMatches}"
 						class="list-group-item"
-						th:classappend="${(match.result == T(it.mantik.esquid.model.MatchResult).VICTORY ? 'border-success' : '')
-						+ (match.result == T(it.mantik.esquid.model.MatchResult).DEFEAT ? 'border-danger' : '')
-						+ (match.result == T(it.mantik.esquid.model.MatchResult).DRAW ? 'border-secondary' : '')}">
+						th:classappend="${(playedMatch.result == T(it.mantik.esquid.model.MatchResult).VICTORY ? 'border-success' : '')
+						+ (playedMatch.result == T(it.mantik.esquid.model.MatchResult).DEFEAT ? 'border-danger' : '')
+						+ (playedMatch.result == T(it.mantik.esquid.model.MatchResult).DRAW ? 'border-secondary' : '')}">
 						
 						<div class="position-relative">
 							<div class="dropdown dropdown-custom position-absolute top-0 end-0 ">
@@ -66,11 +66,11 @@
 								</button>
 								<ul class="dropdown-menu">
 									<li>
-										<a th:href="@{'/admin/match/' + ${match.id} + '/update'}"
+										<a th:href="@{'/admin/played-match/' + ${playedMatch.id} + '/update'}"
 											class="dropdown-item">Modifica</a>
 									</li>
 									<li>
-										<a th:href="@{'/admin/match/' + ${match.id} + '/delete'}"
+										<a th:href="@{'/admin/played-match/' + ${playedMatch.id} + '/delete'}"
 											class="dropdown-item">Cancella</a>
 									</li>
 								</ul>
@@ -79,25 +79,25 @@
 						
 						<div>
 							<i class="fa-solid fa-calendar-check me-2 text-tertiary-color"></i><span
-								th:text="${#temporals.format(match.dateTime, 'dd/MM/yyyy, HH:mm')}"></span
+								th:text="${#temporals.format(playedMatch.dateTime, 'dd/MM/yyyy, HH:mm')}"></span
 >
 						</div>
 						<div class="d-flex justify-content-around align-items-center">
 							<div>
-								<th:block th:if="${match.result == T(it.mantik.esquid.model.MatchResult).VICTORY}">
+								<th:block th:if="${playedMatch.result == T(it.mantik.esquid.model.MatchResult).VICTORY}">
 									<i class="fa-solid fa-circle-check text-success me-2"></i><strong
 										th:text="Vittoria"></strong>
 								</th:block>
-								<th:block th:if="${match.result == T(it.mantik.esquid.model.MatchResult).DEFEAT}">
+								<th:block th:if="${playedMatch.result == T(it.mantik.esquid.model.MatchResult).DEFEAT}">
 									<i class="fa-solid fa-circle-xmark text-danger me-2"></i><strong
 										th:text="Sconfitta"></strong>
 								</th:block>
-								<th:block th:if="${match.result == T(it.mantik.esquid.model.MatchResult).DRAW}">
+								<th:block th:if="${playedMatch.result == T(it.mantik.esquid.model.MatchResult).DRAW}">
 									<i class="fa-solid fa-circle-minus text-secondary me-2"></i><strong
 										th:text="Pareggio"></strong>
 								</th:block>
 								vs
-								<strong th:text="${match.opponent}"></strong>
+								<strong th:text="${playedMatch.opponent}"></strong>
 							</div>
 						</div>
 
