--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -15,7 +15,7 @@
 				<div class="text-center">
 					<h1 class="heading-app-name pt-1 pb-5">eSquid</h1>
 				</div>
-				<h1>Registrati</h1>
+				<h1 class="text-tertiary-color">Registrati</h1>
 
 				<br>
 
