--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -71,7 +71,7 @@
 			<hr>
 			<div class="text-muted">
 			
-				<ul class="list-group">
+				<ul th:unless="${#lists.isEmpty(events)}" class="list-group">
 					<li th:each="event : ${events}" class="list-group-item">
 						<div class="d-flex justify-content-between align-items-center">
 							<a th:href="@{'/event/' + ${event.id}}" th:text="${event.name}" class="link-purple">
@@ -117,6 +117,9 @@
 						</div>
 					</li>
 				</ul>
+				
+				<p th:if="${#lists.isEmpty(events)}">Non è ancora stato pianificato alcun evento</p>
+				
 			</div>
 
 		</section>
@@ -134,7 +137,7 @@
 			<hr>
 			<div class="text-muted">
 			
-				<ul class="list-group">
+				<ul th:unless="${#lists.isEmpty(competitions)}" class="list-group">
 					<li th:each="competition : ${competitions}" class="list-group-item">
 						<div class="d-flex justify-content-between align-items-center">
 							<a th:href="@{'/competition/' + ${competition.id}}" th:text="${competition.name}"
@@ -168,6 +171,9 @@
 						</div>
 					</li>
 				</ul>
+				
+				<p th:if="${#lists.isEmpty(competitions)}">Non è ancora stata inserita alcuna competizione</p>
+				
 			</div>
 
 		</section>
